--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Skeleventy - A skeleton boilerplate built with Eleventy",
   "scripts": {
     "dev": "ELEVENTY_ENV=development eleventy --config=eleventy.config.js --serve & webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && eleventy --config=eleventy.config.js"
+    "production": "NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && eleventy --config=eleventy.config.js --output=docs"
   },
   "repository": {
     "type": "git",
