--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "2.0.0",
   "description": "Personal site of Robert Shenton",
   "scripts": {
-    "dev": "ELEVENTY_ENV=development eleventy --config=eleventy.config.js --serve & webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && eleventy --config=eleventy.config.js --output=docs"
+    "dev": "SET ELEVENTY_ENV=development & eleventy --config=eleventy.config.js --serve & webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "SET NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && eleventy --config=eleventy.config.js --output=docs"
   },
   "repository": {
     "type": "git",
