--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "Personal site of Robert Shenton",
   "scripts": {
-    "dev": "SET ELEVENTY_ENV=development & eleventy --config=eleventy.config.js --serve & webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "dev": "node dev.js",
     "production": "node build.js"
   },
   "repository": {
