--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal site of Robert Shenton",
   "scripts": {
     "dev": "sh dev.sh",
-    "production": "node build.js"
+    "production": "sh build.sh"
   },
   "repository": {
     "type": "git",
