Change package scripts again

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "2.0.1",
   "description": "Personal site of Robert Shenton",
   "scripts": {
-    "dev": "sh dev.sh",
-    "production": "sh build.sh"
+    "dev": "cross-env ELEVENTY_ENV=development eleventy --config=eleventy.config.js --serve & webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && eleventy --config=eleventy.config.js --output=docs"
   },
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
+    "cross-env": "^7.0.2",
     "html-minifier": "^4.0.0",
     "laravel-mix": "^5.0.4",
     "laravel-mix-purgecss": "^4.2.0",
