--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "start http://localhost:8080 && cross-env ELEVENTY_ENV=development eleventy --config=eleventy.config.js --output=dist --serve",
-    "mix": "webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && eleventy --config=eleventy.config.js --output=docs"
+    "mix": "webpack --watch --progress --stats-children --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "cross-env NODE_ENV=production webpack --progress --config=node_modules/laravel-mix/setup/webpack.config.js && eleventy --config=eleventy.config.js --output=docs"
   },
   "repository": {
     "type": "git",
@@ -15,18 +15,18 @@
   "author": "Robert Shenton",
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.10.0",
+    "@11ty/eleventy": "^1.0.2",
     "cross-env": "^7.0.2",
     "html-minifier": "^4.0.0",
-    "laravel-mix": "^5.0.4",
-    "laravel-mix-purgecss": "^4.2.0",
+    "laravel-mix": "^6.0.49",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.26.7",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^13.1.0",
     "tailwindcss": "^1.4.6",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "node-sass": "^4.14.1"
+    "node-sass": "^7.0.3"
   }
 }
